# PyQwt3D

./: ANNOUNCEMENT-0.1.1.TXT  ANNOUNCEMENT-0.1.2.TXT  ANNOUNCEMENT-0.1.3.TXT  ANNOUNCEMENT-0.1.4.TXT  ANNOUNCEMENT-0.1.5.TXT  ANNOUNCEMENT-0.1.6.TXT  ANNOUNCEMENT-0.1.7.TXT  ANNOUNCEMENT-0.1.8.TXT  ANNOUNCEMENT-0.1.TXT  COPYING.PyQwt3D  ChangeLog  GNUmakefile  MANIFEST.in  NEWS  README  README.md  THANKS  TODO  fix.sh  include.pyqwt3d.patch  project.py  pyproject.toml  pyqwt3d-0.2.7.patch  setup.cfg  setup.py  unbieber.py
Doc/: Makefile  nospam.py  sourceforge.py
configure/: PyQwt3D.nsi.in  clean.sh  configure-old.py  configure-qt5.py  configure.py  configure_sip5.py  go-mingw.bat  go3.bat  go4.bat
examples/: AutoSwitch.py  EnrichmentDemo.py  Grab.py  Makefile  ParametricSurfaceDemo.py  SimplePlot.py  TestNumPy.py  TestNumarray.py  TestNumeric.py
include/: qwt3d_enrichment.h
numpy/: qwt3d_numarray.cpp  qwt3d_numarray.h  qwt3d_numeric.cpp  qwt3d_numeric.h  qwt3d_numpy.cpp  qwt3d_numpy.h  qwt3d_python.cpp  qwt3d_python.h
qt4examples/: AutoSwitch.py  EnrichmentDemo.py  Grab.py  ParametricSurfaceDemo.py  SimplePlot.py  TestNumPy.py  TestNumarray.py  TestNumeric.py
qt5examples/: AutoSwitch.py  EnrichmentDemo.py  Grab.py  ParametricSurfaceDemo.py  PyFontify.py  SimplePlot.py  TestNumPy.py  TestNumarray.py  TestNumeric.py
sip/: FILL  OpenGL_Qt3_Module.sip  OpenGL_Qt4_Module.sip  OpenGL_Qt5_Module.sip  OpenGL_mod.sip  Qwt3D_Qt3_Module.sip  Qwt3D_Qt4_Module.sip  Qwt3D_Qt5_Module.sip  STD_VECTOR_BASE  STD_VECTOR_USER  features.sip  qwt3d_autoscaler.sip  qwt3d_axis.sip  (+29 more)
(+9 files in other folders)
