[build-system]
requires = ["sip >=5", "PyQt-builder", "PyQt5"]
build-backend = "sipbuild.api"

[tool.sip.metadata]
name = "PyQwt3D"
version = "1.8.0"
summary = "Python wrapper for Qwtplot3d"
description-file = "README.md"
description-content-type = "text/markdown"
home-page = "https://github.com/GauiStori/PyQwt3D"
maintainer = "Gudjon I. Gudjonsson"
maintainer-email = "gudjon@gudjon.org"
license = "GPL-2.0"
requires-dist = "PyQt5"

[tool.sip.project]
sip-files-dir = "sip"
sdist-excludes = [
  "version.sip",
  ".git/*",
  ".git/*/*",
  ".git/*/*/*",
  ".git/*/*/*/*",
  ".git/*/*/*/*/*",
  ".git/*/*/*/*/*/*",
  ".git/*/*/*/*/*/*/*"
]
